fix: fixed some features + feat:made styles for the card and added styles for nightmode

--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,9 @@
   background-position: center;
   cursor: pointer;
 }
+.dark .fake{
+  background-image: url("/fav-dark.svg");
+}
 
 .favBtn:checked + .fake {
   background-image: url("/fav-checked.svg");
